--- a/basics.tex
+++ b/basics.tex
@@ -1777,7 +1777,7 @@ and so $\lim _na_{\lambda _{\mu _\nu}}=L$, where we have applied both the $(\Rig
 
 This has been a rather long chapter and we have covered many different properties of the real numbers.  For convenience, we summarize here some of the main points we have covered.
 \begin{enumerate}
-\item The real numbers are the unique (up to isomorphism of totally-ordered fields) nonzero dedekind complete totally-ordered field.
+\item The real numbers are the unique (up to isomorphism of totally-ordered fields) nonzero dedekind-complete totally-ordered field.
 \item The real numbers are cauchy complete.
 \item The real numbers have cardinality $2^{\aleph _0}>
 \aleph _0$.
