--- a/uniform.tex
+++ b/uniform.tex
@@ -1030,7 +1030,7 @@ $X$ is \emph{uniformly-completely-$T_4$}\index{Uniformly-completely-$T_4$} iff i
 \begin{dfn}[Uniformly-perfectly-$T_4$]\label{UniformlyPerfectlyT4}
 $X$ is \emph{uniformly-perfectly-$T_4$}\index{Uniformly-perfectly-$T_4$} iff it is $T_1$ and any closed set and any two disjoint closed subsets can be can be uniformly-perfectly-separated.
 \end{dfn}
-The goal of this section is to prove that all of the from uniformly-$T_0$ to uniformly-completely-$T-3$ (that is, $T_0$ implies uniformly-completely-$T_3$---see \cref{crl4.4.16}).  We also present counter-examples to show that all these equivalent axioms are strictly weaker than both uniformly-$T_4$ (see \cref{}) and uniformly-perfectly-$T_4$ (see \cref{}
+The goal of this section is to prove that all of the from uniformly-$T_0$ to uniformly-completely-$T-3$ (that is, $T_0$ implies uniformly-completely-$T_3$---see \cref{crl4.4.16}).  We also present counter-examples to show that all these equivalent axioms are strictly weaker than both uniformly-$T_4$ (see \cref{exm4.4.20}) and uniformly-perfectly-$T_4$ (see \cref{exm4.4.23}).
 
 \subsection{The key result}
 
